# transfer_station

./: CMakeLists.txt  LICENSE.txt  README.md  example.launch  package.xml
include/transfer_station/: IPC_Interface.h  IPC_Router.hpp  LCM_Router.hpp  Serializer.h
launch/: central.launch  test_i2r.launch  test_r2i.launch
nodes/: ros_ipc_transfer_node.cpp  ros_lcm_transfer_node.cpp
scripts/: ipc_start_central.sh
tests/: IPC_Listener.cpp  IPC_Talker.cpp  ROS_Listener.cpp  ROS_Talker.cpp
