<?xml version="1.0"?>
<package>
  <name>transfer_station</name>
  <version>0.1.0</version>
  <description>A package to transfer between IPC and ROS, or LCM and ROS.</description>
  <maintainer email="humhu@cmu.edu">Humphrey Hu</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

</package>
